--- a/src/Xutim/Bundle/CoreBundle/templates/admin/tag/_tag_sidebar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/tag/_tag_sidebar.html.twig
@@ -1,16 +1,5 @@
 {% import '@XutimCore/admin/common/translatable.html.twig' as translatable %}
 
-{% macro modalDialogPage(id, status, confirmActionLabel, iconName) %}
-    <twig:Xutim:Admin:ModalDialog
-        class="btn-link text-{{ status.colorClass }} p-0"
-        modalDialogColor="{{ status.colorClass }}"
-        action="{{ path('admin_tag_publication_status_edit', {id: id, status: status.value}) }}"
-        confirmActionLabel="{{ confirmActionLabel }}"
-    >
-        <twig:Xutim:Admin:Icon name="{{ iconName }}" plain="true" />
-    </twig:Xutim:Admin:ModalDialog>
-{% endmacro %}
-
 <div class="mb-3">
     {% if not translation %}
         <twig:Xutim:Admin:SidebarSection>
@@ -40,34 +29,12 @@
                 </twig:block>
 
                 <twig:block name="content">
-                    <div>
-                        <span
-                            class="badge me-2 text-bg-{{ tag.status.colorClass }}"
-                        >
-                            {{ tag.status.name }}
-                        </span>
-                    </div>
-
-                    {% if is_granted_translation(content_context_language()) %}
-                        {% from '@XutimCore/admin/tag/_tag_sidebar.html.twig' import modalDialogPage %}
-                        <div>
-                            {% if tag.status.canBeDrafted() %}
-                                {{ modalDialogPage(tag.id, constant('Xutim\\CoreBundle\\Entity\\PublicationStatus::Draft'), 'draft'|trans({}, 'admin')|capitalize, 'clipboard') }}
-                            {% endif %}
-
-                            {% if tag.status.canPublish %}
-                                {{ modalDialogPage(tag.id, constant('Xutim\\CoreBundle\\Entity\\PublicationStatus::Published'), 'publish'|trans({}, 'admin')|capitalize, 'cloud-upload') }}
-                            {% endif %}
-
-                            {% if tag.status.canSubmitForEvaluation %}
-                                {{ modalDialogPage(tag.id, constant('Xutim\\CoreBundle\\Entity\\PublicationStatus::Evaluation'), 'submit for evaluation'|trans({}, 'admin')|capitalize, 'refresh-alert') }}
-                            {% endif %}
-
-                            {% if tag.status.canBeArchived %}
-                                {{ modalDialogPage(tag.id, constant('Xutim\\CoreBundle\\Entity\\PublicationStatus::Archived'), 'archive'|trans({}, 'admin')|capitalize, 'archive') }}
-                            {% endif %}
-                        </div>
-                    {% endif %}
+                    {{
+                        include('@XutimCore/admin/publication_status/_status_buttons.html.twig', {
+                            translation: tag,
+                            path: 'admin_tag_publication_status_edit' 
+                        })
+                    }}
                 </twig:block>
             </twig:Xutim:Admin:SidebarItem>
 
@@ -88,15 +55,32 @@
 
             <twig:Xutim:Admin:SidebarItem>
                 <twig:block name="content">
-                    <twig:Xutim:Admin:ModalDialog
-                        class="btn btn-outline-danger"
-                        modalDialogColor="danger"
-                        action="{{ path('admin_tag_delete', {id: tag.id}) }}"
-                        confirmActionLabel="{{ 'delete'|trans({}, 'admin')|capitalize }}"
-                    >
-                        <twig:Xutim:Admin:Icon name="trash" />
-                        {{ 'delete'|trans({}, 'admin')|capitalize }}
-                    </twig:Xutim:Admin:ModalDialog>
+                    <div class="btn-group">
+                        {% if translation.status.canBeArchived %}
+                            {%
+                                set archiveStatus = constant('Xutim\\CoreBundle\\Entity\\PublicationStatus::Archived')
+                            %}
+                            <twig:Xutim:Admin:ModalDialog
+                                class="btn btn-outline-{{ archiveStatus.colorClass}}"
+                                modalDialogColor="{{archiveStatus.colorClass}}"
+                                action="{{ path('admin_tag_publication_status_edit', {id: tag.id, status: archiveStatus.value}) }}"
+                                confirmActionLabel="{{ 'archive'|trans({}, 'admin')|capitalize }}"
+                            >
+                                <twig:Xutim:Admin:Icon name="archive" />
+                                {{ 'archive'|trans({}, 'admin')|capitalize }}
+                            </twig:Xutim:Admin:ModalDialog>
+                        {% endif %}
+                        <twig:Xutim:Admin:ModalDialog
+                            class="btn btn-outline-danger"
+                            modalDialogColor="danger"
+                            action="{{ path('admin_tag_delete', {id: tag.id}) }}"
+                            confirmActionLabel="{{ 'delete'|trans({}, 'admin')|capitalize }}"
+                        >
+                            <twig:Xutim:Admin:Icon name="trash" />
+                            {{ 'delete'|trans({}, 'admin')|capitalize }}
+                        </twig:Xutim:Admin:ModalDialog>
+                    </div>
+
                 </twig:block>
             </twig:Xutim:Admin:SidebarItem>
         </twig:Xutim:Admin:SidebarSection>
