--- a/src/Xutim/Bundle/CoreBundle/templates/admin/tag/_tag_sidebar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/tag/_tag_sidebar.html.twig
@@ -32,7 +32,7 @@
                     {{
                         include('@XutimCore/admin/publication_status/_status_buttons.html.twig', {
                             translation: tag,
-                            path: 'admin_tag_publication_status_edit' 
+                            url: 'admin_tag_publication_status_edit' 
                         })
                     }}
                 </twig:block>
