--- a/src/Xutim/Bundle/EventBundle/templates/admin/event/_event_status_item.html.twig
+++ b/src/Xutim/Bundle/EventBundle/templates/admin/event/_event_status_item.html.twig
@@ -7,7 +7,7 @@
         {{
             include('@XutimCore/admin/publication_status/_status_buttons.html.twig', {
                 translation: event,
-                path: 'admin_event_publication_status_edit' 
+                url: 'admin_event_publication_status_edit' 
             })
         }}
     </twig:block>
