--- a/src/Xutim/Bundle/RedirectBundle/templates/admin/redirect/_redirect_row.html.twig
+++ b/src/Xutim/Bundle/RedirectBundle/templates/admin/redirect/_redirect_row.html.twig
@@ -9,10 +9,24 @@
     </td>
     <td>
         {{ redirect.targetContentTranslation.title }}
+        {% if redirect.targetContentTranslation.hasPage() %}
+            {% set route = 'admin_page_show_by_slug' %}
+        {% else %}
+            {% set route = 'admin_article_show_by_slug' %}
+        {% endif %}
+
+        <a
+            href="{{ path(route, {'slug': redirect.targetContentTranslation.slug}) }}"
+            data-turbo-frame="_top"
+        >
+            <twig:ux:icon name="tabler:external-link" class="w-3 h-3" />
+        </a>
     </td>
+    {#
     <td>
         {{ redirect.locale }}
     </td>
+    #}
     <td>
         {% if redirect.permanent %}
             <span class="status status-danger">
@@ -23,5 +37,16 @@
                 {{ 'no'|trans({}, 'admin') }}
             </span>
         {% endif %}
+    </td>
+    <td>
+        <twig:Xutim:Admin:ModalDialog
+            class="btn btn-outline-danger float-end"
+            modalDialogColor="danger"
+            action="{{ path('admin_redirect_delete', {id: redirect.id}) }}"
+            confirmActionLabel="{{ 'delete'|trans({}, 'admin')|capitalize }}"
+        >
+            <twig:Xutim:Admin:Icon name="trash" />
+            {{ 'delete'|trans({}, 'admin')|capitalize }}
+        </twig:Xutim:Admin:ModalDialog>
     </td>
 </tr>
