feat(core-bundle, ui): move external link to the top bar

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
@@ -14,6 +14,10 @@
     <twig:Xutim:Admin:BreadcrumbsArticle :article="article" />
 {% endblock %}
 
+{% block publicLink %}
+    <twig:Xutim:Admin:PublicPageLink :contentTranslation="translation" />
+{% endblock %}
+
 {% block pageMenu %}
     {% if translation is not same as(null) %}
         <twig:Xutim:Admin:Button
@@ -24,8 +28,6 @@
             <twig:Xutim:Admin:Icon name="history" class="me-1" />
             History
         </twig:Xutim:Admin:Button>
-
-        <twig:Xutim:Admin:PublicPageLink :contentTranslation="translation" />
     {% endif %}
 
     <twig:Xutim:Admin:Button
