--- a/src/Xutim/Bundle/CoreBundle/templates/admin/_top_bar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/_top_bar.html.twig
@@ -14,13 +14,14 @@
         </twig:Xutim:Admin:Button>
 
         <div class="navbar-nav flex-row order-md-last">
-            <div class="my-2 my-md-0 nav-item dropdown me-3">
-                <div class="button-group">
+            <div class="my-2 my-md-0 nav-item dropdown me-1">
+                <div class="button-group d-flex flex-row gap-1">
+                    {{publicLinkBlock|raw}}
                     <a
                         href="{{ path('admin_article_list', {searchTerm: ''}) }}"
                         class="btn btn-xs btn-icon"
                     >
-                        <twig:Xutim:Admin:Icon name="search" plain="true" />
+                        <twig:ux:icon name="tabler:search" class="w-3"/>
                     </a>
                 </div>
             </div>
