--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_edit.html.twig
@@ -20,6 +20,14 @@
     <twig:Xutim:Admin:BreadcrumbsPage :page="page" />
 {% endblock %}
 
+{% block publicLink %}
+    {% if translation is not same as(null) %}
+        <twig:Xutim:Admin:PublicPageLink :contentTranslation="translation" />
+    {% else %}
+        <twig:Xutim:Admin:PublicPageLink />
+    {% endif %}
+{% endblock %}
+
 {% block pageMenu %}
     {% if translation is not same as(null) %}
         <twig:Xutim:Admin:Button
@@ -30,10 +38,6 @@
             <twig:Xutim:Admin:Icon name="history" class="me-1" />
             History
         </twig:Xutim:Admin:Button>
-
-        <twig:Xutim:Admin:PublicPageLink :contentTranslation="translation" />
-    {% else %}
-        <twig:Xutim:Admin:PublicPageLink />
     {% endif %}
 
     <twig:Xutim:Admin:Button
