fix(core-bundle, admin): fix non existent property in page list

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_list.html.twig
@@ -12,9 +12,12 @@
     {% endif %}
 {% endblock %}
 
-{%
-    set trans = selectedPage.translationByLocaleOrAny(content_context_language())
-%}
+{% if selectedPage %}
+    {%
+        set trans = selectedPage.translationByLocaleOrAny(content_context_language())
+    %}
+{% endif %}
+
 {% block publicLink %}
     {% if selectedPage %}
         <twig:Xutim:Admin:PublicPageLink
