fix(core-bundle): fix passing non existent variable

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_list.html.twig
@@ -20,9 +20,7 @@
 
 {% block publicLink %}
     {% if selectedPage %}
-        <twig:Xutim:Admin:PublicPageLink
-            :tagTranslation="tag.translationByLocale(content_context_language())"
-        />
+        <twig:Xutim:Admin:PublicPageLink :contentTranslation="trans" />
     {% else %}
         <twig:Xutim:Admin:PublicPageLink />
     {% endif %}
